--- a/assets/aculinaryartillery/lang/ja.json
+++ b/assets/aculinaryartillery/lang/ja.json
@@ -59,7 +59,7 @@
   "blockhelp-mixingbowl-mix": "混ぜる",
 
   "blockdesc-bottle-*-raw" : "熱を加えてもいいかもしれない。",
-  "blockdesc-bottle-*-burned": "空のボトルは、目的に応じて乾燥したものになります。",
+  "blockdesc-bottle-*-burned": "空のボトルは、用途に応じて最適なものになります。",
 
   "(Locked) " : "(ロック済) ",
   "blockhelp-mixingbowl-autolock" : "ロック",
