--- a/assets/aculinaryartillery/lang/ja.json
+++ b/assets/aculinaryartillery/lang/ja.json
@@ -43,7 +43,7 @@
   "efrecipes:- {0} {2} sat, {1} hp" : "- {0} {2} sat, {1} hp",
   "efrecipes:- {0} {1} sat" : "- {0} {1} sat",
   "efrecipes:made with " : "以下を使用 ",
-  "efrecipes:and " : "と ",
+  "efrecipes:and " : " ",
   "efrecipes:Made with ": "以下を使用 ",
   "efrecipes:Squeezing x{0} {1} for {2} hours": "Squeezing x{0} {1} for {2} hours",
 
@@ -59,7 +59,7 @@
   "blockhelp-mixingbowl-mix": "混ぜる",
 
   "blockdesc-bottle-*-raw" : "熱を加えてもいいかもしれない。",
-  "blockdesc-bottle-*-burned": "空のボトルは、目的に応じて乾燥したものになります。",
+  "blockdesc-bottle-*-burned": "空のボトルは、用途に応じて最適なものになります。",
 
   "(Locked) " : "(ロック済) ",
   "blockhelp-mixingbowl-autolock" : "ロック",
@@ -195,6 +195,6 @@
 
   "aculinaryartillery:Will make {0}" : "{0}を作成します。",
   "aculinaryartillery:made with " : "以下を使用 ",
-  "aculinaryartillery:and " : "と ",
+  "aculinaryartillery:and " : " ",
   "aculinaryartillery:Made with ": "以下を使用 ",
 }
